--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
         venus_v8: generatePlanet("venus", 8),
       };
 
-      const cometonics = { visible: false };
+      const cometonics = { visible: false, scale: 0.001 };
 
       const messier = {
         clusters: { visible: false, scale: 0.001 },
-        nebulas: { visible: false, scale: 0.0004 },
+        nebulas: { visible: false, scale: 0.001 },
         galaxies: { visible: false, scale: 0.001 },
         superclusters: { visible: false, scale: 0.001 },
       };
@@ -387,7 +387,10 @@
 
         <a-entity :visible="r.cometonics.visible" position="0 0 0">
           <!-- <a-entity :sprite-particles="exampleParticles"></a-entity> -->
-          <a-entity gltf-model="#cometonics" scale="0.01 0.01 0.01"></a-entity>
+          <a-entity
+            gltf-model="#cometonics"
+            :scale="{x: r.cometonics.scale,y: r.cometonics.scale,z: r.cometonics.scale }"
+          ></a-entity>
           <a-text value="cometonics" align="center"></a-text>
         </a-entity>
 
@@ -404,13 +407,19 @@
 
         <a-entity v-for="g,key,i in r.galactic" :visible="g.visible">
           <!-- <a-entity :sprite-particles="exampleParticles"></a-entity> -->
-          <a-entity :gltf-model="'#' + key" scale="0.01 0.01 0.01"></a-entity>
+          <a-entity
+            :gltf-model="'#' + key"
+            :scale="{x: g.scale,y: g.scale,z: g.scale }"
+          ></a-entity>
           <a-text :value="key" align="center"></a-text>
         </a-entity>
 
         <a-entity :visible="!r.bigbang.visible">
           <!-- <a-entity :sprite-particles="exampleParticles"></a-entity> -->
-          <a-entity gltf-model="#bigbang" scale="0.001 0.001 0.001"></a-entity>
+          <a-entity
+            gltf-model="#bigbang"
+            :scale="{x: r.bigbang.scale,y: r.bigbang.scale,z: r.bigbang.scale }"
+          ></a-entity>
           <a-text value="bigbang" align="center"></a-text>
         </a-entity>
       </a-entity>
