--- a/mikkTest.html
+++ b/mikkTest.html
@@ -17,7 +17,7 @@
         embedded
         arjs='sourceType: webcam; debugUIEnabled: false;'>
     <a-assets>
-        <a-asset-item autoload id="messier" src="3d/galaxy_1.glb"></a-asset-item>
+        <a-asset-item autoload id="messier" src="assets/clusters_anim.glb"></a-asset-item>
         <a-asset-item autoload id="testModel" src="planets/Test.glb"></a-asset-item>
         <img id="m92" src="images/m92.png">
         <img  id="transparent1" src="images/heic0918a-transparent.png">
