--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <script src="https://unpkg.com/es-module-shims@1.5.17/dist/es-module-shims.js"></script>
     <script src="https://aframe.io/releases/1.0.4/aframe.min.js"></script>
     <script src="https://raw.githack.com/AR-js-org/AR.js/master/aframe/build/aframe-ar-nft.js"></script>
+    <script src="https://unpkg.com/aframe-extras@6.1.1/dist/aframe-extras.min.js"></script>
     <script src="https://unpkg.com/aframe-sprite-particles-component@^0.5.4/aframe-sprite-particles-component.js"></script>
     <script src="https://unpkg.com/reconnecting-websocket@4.4.0/dist/reconnecting-websocket-iife.min.js"></script>
     <script src="./lib/websocket.js"></script>
@@ -47,7 +48,7 @@
       const cometonics = { visible: false, scale: 0.001 };
 
       const messier = {
-        clusters: { visible: false, scale: 0.001 },
+        clusters: { visible: false, scale: 0.01 },
         nebulas: { visible: false, scale: 0.001 },
         galaxies: { visible: false, scale: 0.001 },
         superclusters: { visible: false, scale: 0.001 },
@@ -310,7 +311,7 @@
         <a-asset-item
           autoload
           id="clusters"
-          src="assets/clusters.glb"
+          src="assets/clusters_anim.glb"
         ></a-asset-item>
         <a-asset-item
           autoload
@@ -388,10 +389,11 @@
         <a-entity :visible="r.cometonics.visible">
           <!-- <a-entity :sprite-particles="exampleParticles"></a-entity> -->
           <a-entity
+            animation-mixer
             gltf-model="#cometonics"
             :scale="{x: r.cometonics.scale,y: r.cometonics.scale,z: r.cometonics.scale }"
             :model-opacity="{opacity: 0.5}"
-            :animation="{property: 'rotation', dur: 110000, to: {x: 0, y: 0, z: 360}, loop: true, easing: 'linear'}"
+            :animation_="{property: 'rotation', dur: 110000, to: {x: 0, y: 0, z: 360}, loop: true, easing: 'linear'}"
           ></a-entity>
           <a-text value="cometonics" align="center"></a-text>
         </a-entity>
@@ -399,10 +401,11 @@
         <a-entity v-for="m,key,i in r.messier" :visible="m.visible">
           <!-- <a-entity :sprite-particles="exampleParticles"></a-entity> -->
           <a-entity
+            animation-mixer
             :gltf-model="'#' + key"
             :scale="{x: m.scale,y: m.scale,z: m.scale }"
             :model-opacity="{opacity: 0.5}"
-            :animation="{property: 'rotation', dur: 100000, to: {x: 0, y: 0, z: 360}, loop: true, easing: 'linear'}"
+            :animation_="{property: 'rotation', dur: 100000, to: {x: 0, y: 0, z: 360}, loop: true, easing: 'linear'}"
           ></a-entity>
           <a-text :value="key" align="center"></a-text>
         </a-entity>
@@ -410,10 +413,11 @@
         <a-entity v-for="g,key,i in r.galactic" :visible="g.visible">
           <!-- <a-entity :sprite-particles="exampleParticles"></a-entity> -->
           <a-entity
+            animation-mixer
             :gltf-model="'#' + key"
             :scale="{x: g.scale,y: g.scale,z: g.scale }"
             :model-opacity="{opacity: 0.5}"
-            :animation="{property: 'rotation', dur: 100100, to: {x: 0, y: 0, z: 360}, loop: true, easing: 'linear'}"
+            :animation_="{property: 'rotation', dur: 100100, to: {x: 0, y: 0, z: 360}, loop: true, easing: 'linear'}"
           ></a-entity>
           <a-text :value="key" align="center"></a-text>
         </a-entity>
@@ -421,10 +425,11 @@
         <a-entity :visible="r.bigbang.visible">
           <!-- <a-entity :sprite-particles="exampleParticles"></a-entity> -->
           <a-entity
+            animation-mixer
             gltf-model="#bigbang"
             :scale="{x: r.bigbang.scale,y: r.bigbang.scale,z: r.bigbang.scale }"
             :model-opacity="{opacity: 0.5}"
-            :animation="{property: 'rotation', dur: 101000, to: {x: 0, y: 0, z: 360}, loop: true, easing: 'linear'}"
+            :animation_="{property: 'rotation', dur: 101000, to: {x: 0, y: 0, z: 360}, loop: true, easing: 'linear'}"
           ></a-entity>
           <a-text value="bigbang" align="center"></a-text>
         </a-entity>
