clusters anim fix

--- a/index.html
+++ b/index.html
@@ -390,7 +390,7 @@
         <a-asset-item
           autoload
           id="clusters"
-          src="assets/clusters_anim.glb"
+          src="assets/clusters.glb"
         ></a-asset-item>
         <a-asset-item
           autoload
